<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/note_text"
        android:textStyle="bold"
        android:textSize="25sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="20sp"
        android:layout_marginHorizontal="15dp"/>

    <EditText
        android:id="@+id/edtTitleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:hint="Title"
        android:lines="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_text"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="15dp"/>

    <EditText
        android:id="@+id/edtContentDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:hint="Content"
        android:maxHeight="200dp" />

    <ImageView
        android:id="@+id/btn_done"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_done_24"
        android:textSize="17sp"/>

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="15dp"
        android:src="@drawable/ic_back_24"
        android:textSize="17sp" />

</LinearLayout>